--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <script src="./dist/mainOutput.bundle.js"></script> 
+  <script src="./dist/mainOutput.bundle.js"></script>
+
   <title>Disease Mapper</title>
 
 </head>
 <body>
   
-  <div> 
-     <h1>Nav Bar at the top</h1>
+  <div class="nav_bar">
+    <div class="nb_left">
+      <div id = "dm">Disease Mapper</div>
+      <div id = "">Story</div>
+      <div id = "">View</div>
+      <div id = "">Compare</div>
+    </div>
+
+    <div class="nb_right">
+      <div>About</div>
+    </div>
   </div>
 
   Map Here 
-  <div id="TEST">I need a miniserver soon. You see this you not vanilla JSing right yet</div>
+  <div id="TEST">I need a miniserver soon. You see this is okay</div>
   <div id="TEST2"></div>
   <div id="mapId"></div>
 
