Styles basic layout and renders map

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <script src="./dist/mainOutput.bundle.js"></script>
+  <script src="./dist/mainOutput.bundle.js"></script> 
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
 
   <title>Disease Mapper</title>
 
@@ -25,10 +26,13 @@
     </div>
   </div>
 
-  Map Here 
-  <div id="TEST">I need a miniserver soon. You see this is okay</div>
+
+
+  
+
   <div id="TEST2"></div>
   <div id="mapId"></div>
+
 
 </body>
 </html>
