Uploads basic map

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <script src="./dist/mainOutput.bundle.js"></script> 
+  <script defer src="./dist/mainOutput.bundle.js"></script> 
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
 
   <title>Disease Mapper</title>
