--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <script defer src="./dist/mainOutput.bundle.js"></script> 
-  <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
+  <!-- FIREBASE STUFF -->
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
+    <script>
+      import { firebaseKey } from './config/keys';
+      // Your web app's Firebase configuration
+      let firebaseConfig = {
+        apiKey: firebaseKey,
+        authDomain: "sick-maps.firebaseapp.com",
+        databaseURL: "https://sick-maps.firebaseio.com",
+        projectId: "sick-maps",
+        storageBucket: "sick-maps.appspot.com",
+        messagingSenderId: "220040589591",
+        appId: "1:220040589591:web:bad4fdaf7cefcd8d16c752",
+        measurementId: "G-0PCKZLT3SR"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      // firebase.analytics();
+      const db = firebase.firestore(); // initializes firestore app. // We can now access this in our db
+      db.settings({ timestampsInSnapshots: true }); // modify it.
+    </script>
+
+
+    <!-- Our JS -->
+      <script defer src="./dist/mainOutput.bundle.js"></script>
+
+    <!-- Mapbox -->
+      <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
 
   <title>Disease Mapper</title>
 
@@ -36,3 +63,11 @@
 
 </body>
 </html>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-analytics.js"></script>
+
