--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel = "stylesheet" type = "text/css" href = "assets/stylesheets/output.css" />
 
   <!-- FIREBASE STUFF -->
     <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
