Refactors about modal skeleton

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <div id="aboutModal" class="modal">
     <div class="modal-content">
       <span class="closeBtn">&times;</span>
+      <h1>About</h1>
       <p>About Placeholder Modal. Will contain information about the data</p>
     </div>
   </div>
