Adds ID for easier support and querying

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="nb_right">
-      <div class="modalButton">About</div>
+      <div id="aboutModBtn" class="modalButton">About</div>
     </div>
   </div>
 
