Work on about modal mostly complete

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div id="dm">Disease Mapper</div>
       <div>Story</div>
       <div>View</div>
-      <div>Compare</div>
+      <!-- <div>Compare</div> --> <!-- Much later down the line-->
     </div>
 
     <div class="nb_right">
@@ -59,6 +59,9 @@
       <span class="closeBtn">&times;</span>
       <h1>About</h1>
       <p>About Placeholder Modal. Will contain information about the data</p>
+      <p>Data was gathered from the CDC's flu network.</p>
+      <p>Styling was inspired from https://material.io/design/color/dark-theme.html.</p>
+      <p>Short blurb about self and paste links to github and linkedin</p>
     </div>
   </div>
 
