Create skeleton for story modal

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
     </div>
   </div>
 
+  <div id="storyModal" class="storyModal">
+    <div class="modal-content">
+      <title id="storyTitle"></title>
+      <p id="storyContent"></p>
+        Left Right Nav.
+    </div>
+  </div>
+
 </body>
 </html>
 
