Update skeleton to include a seperate div to push nav to the bottom

--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
     </div>
   </div>
 
-  <div id="storyModal" class="storyModal">
+  <div id="storyModal" class="story-modal">
     <div class="modal-content">
-      <title id="storyTitle"></title>
-      <p id="storyContent"></p>
-        Left Right Nav.
+      <h1 id="storyTitle">Default Title</h1>
+      <p id="storyContent">PlaceHolder Content</p>
+    <div class = "storyNav">
+    </div>
+        <span class="button">&#10094;</span>
+        1 of bla. 
+        <span class="button">&#10095;</span>
     </div>
   </div>
 
