Centers text for nav

--- a/index.html
+++ b/index.html
@@ -66,13 +66,17 @@
   </div>
 
   <div id="storyModal" class="story-modal">
+    <h1 id="storyTitle">Default Title</h1> 
     <div class="modal-content">
-      <h1 id="storyTitle">Default Title</h1>
       <p id="storyContent">PlaceHolder Content</p>
       <div class = "storyNav">
-        <span class="button">&#10094;</span>
-        1 of bla.
-        <span class="button">&#10095;</span>
+        <span id="snLeft" class="btn">&#10094;</span>
+        <div class="storyNumHolder">
+          <span>
+            <span class="numLeft">1</span>&nbsp;of&nbsp;<span class="numRight">15</span>
+          </span>
+        </div>
+        <span id="snRight" class="btn">&#10095;</span>
       </div>
     </div>
   </div>
