--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   <div class="nav_bar">
     <div class="nb_left">
       <div id="dm">Disease Mapper</div>
-      <div>Story</div>
-      <div>View</div>
+      <div id="storyModBtn" >Story</div>
+      <div id="viewBtn">View</div>
       <!-- <div>Compare</div> --> <!-- Much later down the line-->
     </div>
 
