Add TODO: figure out topojson library

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- D3 Stuff. I thought I had this npm installed?!?-->
   <!-- <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-  <script src="https://d3js.org/topojson.v2.js"></script>
+  <script src="https://d3js.org/topojson.v2.js"></script> <!-- TODO: Why is this necessary still? -->
     <!-- Our JS -->
       <script defer src="./dist/mainOutput.bundle.js"></script>
 
