Refactor story nav and remove superfluous html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <span id="snLeft" class="btn">&#10094;</span>
         <div class="storyNumHolder">
           <span>
-            <span id="numLeft"></span>&nbsp;of&nbsp;<span id="numRight">15</span>
+            <span id="numLeft"></span>&nbsp;of&nbsp;<span id="numRight"></span>
           </span>
         </div>
         <span id="snRight" class="btn">&#10095;</span>
