--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
       <p id="storyContent">PlaceHolder Content</p>
       <div class = "storyNav">
         <span id="snLeft" class="btn">&#10094;</span>
+        <span id="fakeLeft" class="fkBtn">&#10094;</span>
         <div class="storyNumHolder">
           <span>
             <span id="numLeft"></span>&nbsp;of&nbsp;<span id="numRight"></span>
           </span>
         </div>
         <span id="snRight" class="btn">&#10095;</span>
+        <span id="fakeRight" class="fkBtn">&#10095;</span>
       </div>
     </div>
   </div>
