Add more to personal blurb

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
       <p>About Placeholder Modal. Will contain information about the data</p>
       <p>Data was gathered from the CDC's flu network.</p>
       <p>Styling was inspired from https://material.io/design/color/dark-theme.html.</p>
-      <p>Short blurb about self and paste links to github and linkedin</p>
+      <p>I am a former biologist and snowboarding instructor. 
+        I began coding more passionately when I learned and applied unsupervised machine learning to analyze genetic data. 
+        I then optimized my code by implementing a map-reduce.
+        Short blurb about self and paste links to github and linkedin</p>
     </div>
   </div>
 
